--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/vite": "^4.1.18",
     "nuxt": "^4.3.0",
+    "nuxt-toast": "^1.4.0",
     "pinia": "^3.0.4",
     "tailwindcss": "^4.1.18",
     "vue": "^3.5.27",
