--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@bhplugin/vue3-datatable": "^2.0.2",
     "@pinia/nuxt": "^0.11.3",
     "@tailwindcss/vite": "^4.1.18",
+    "chart.js": "^4.5.1",
     "nuxt": "^4.3.0",
     "nuxt-swal": "^1.0.0",
     "nuxt-toast": "^1.4.0",
